0032819: Data Exchange - VrmlAPI_Writer does not write all colors

VrmlData_ShapeConvert::addShape() - fixed handling of colors assigned to Compound instead of a Face.
RWMesh_FaceIterator is now used to dispatch colors and skip Faces without triangulation.